--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -22,6 +22,11 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Generate site files
         id: generate_files
         run: python generate.py
@@ -49,6 +54,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Generate site files again (or download artifact)
         run: python generate.py
