Add cores, dimensions, connectors
Also freeze header
Adjust column sizes
Reorder filters and group the smaller ones
Print image fetch progress
Add OpenGraph image

--- a/boards/raspberry_pi_pico_1.yaml
+++ b/boards/raspberry_pi_pico_1.yaml
@@ -9,5 +9,5 @@ connectivity: []
 connectors: []
 smd: true
 notes: ""
-image: "https://se.farnell.com/productimages/large/en_GB/3643332-501.jpg"
+image: "https://shop.pimoroni.com/cdn/shop/products/PICOBOARDANGLEWHITE1.jpg"
 url: "https://www.raspberrypi.com/products/raspberry-pi-pico/"
