--- a/boards/raspberry_pi_pico_2.yaml
+++ b/boards/raspberry_pi_pico_2.yaml
@@ -9,5 +9,5 @@ connectivity: []
 connectors: []
 smd: true
 notes: ""
-image: "https://se.farnell.com/productimages/large/en_GB/SC21034-40.jpg"
+image: "https://shop.pimoroni.com/cdn/shop/files/pico-2-1.png"
 url: "https://www.raspberrypi.com/products/raspberry-pi-pico-2/"
