--- a/boards/uctronics_arducam_pico4ml.yaml
+++ b/boards/uctronics_arducam_pico4ml.yaml
@@ -8,6 +8,6 @@ dimensions: "21x51"
 connectivity: []
 connectors: []
 smd: false
-notes: "No castellated edges, Camera, 0.96” LCD"
+notes: "No castellated edges, Camera, 0.96\" LCD"
 image: "https://cdn.tindiemedia.com/images/resize/sLH0REjSZPsyZRYLJM-690yKA20=/p/full-fit-in/2336x1752/i/292462/products/2021-03-22T00%3A43%3A32.477Z-b0302%20Arducam%20Pico4ML%20TinyML%20Dev%20Board%20for%20Raspberry%20Pi%20%282%29.jpg"
 url: "https://www.tindie.com/products/uctronics/rp2040-dev-board-for-tinyml-arducam-pico4ml/"
