--- a/boards/banana_pi_bpi-pico-rp2040.yaml
+++ b/boards/banana_pi_bpi-pico-rp2040.yaml
@@ -6,7 +6,7 @@ ram: "264 KB"
 usb: "type-c"
 dimensions: "21x56"
 connectivity: []
-connectors: ["qwiic"]
+connectors: ["Qwiic"]
 notes: ""
 smd: true
 image: "https://docs.banana-pi.org/bpi-picow-s3/banana_pi_bpi-pico-rp2040_4.jpg"
