--- a/boards/raspberry_pi_pico_2_w.yaml
+++ b/boards/raspberry_pi_pico_2_w.yaml
@@ -9,5 +9,5 @@ connectivity: ["WiFi", "BLE"]
 connectors: []
 smd: true
 notes: ""
-image: "https://se.farnell.com/productimages/large/en_GB/4568690-500.jpg"
+image: "https://shop.pimoroni.com/cdn/shop/files/PICO_2_W.png"
 url: "https://www.raspberrypi.com/products/raspberry-pi-pico-2/"
