--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -45,23 +45,11 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Checkout repository (main branch for source)
-        uses: actions/checkout@v4
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
-          ref: main
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Generate site files again (or download artifact)
-        run: python generate.py
+          name: site-build-output
+          path: out/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
